--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: The-Fall-of-the-Niebelungs_3636
-_version: 0.1.0
+_version: 0.2.0
 contributor:
   translator:
     agent_name: Armour, Margaret
     gutenberg_agent_id: '1248'
     url: http://www.gutenberg.org/2009/agents/1248
+covers:
+- cover_type: generated
+  image_path: cover.png
 description: 'Uniform title: Nibelungenlied'
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3636#The-Fall-of-the-Niebelungs
 gutenberg_issued: '2003-01-01'
 gutenberg_type: Text
 identifiers:
